# OOP_Homework

./: .coverage  .gitignore  README.md  index.html  main.py  pyproject.toml
logs/: logfile.txt
setting/: log_setting.py  setting.py
src/: category.py  init.py  product.py  raises.py
tests/: conftest.py  test_category.py  test_init.py  test_product.py
