[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["aleksandr <kharitonov_am@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 119

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''\.git'''

[tool.isort]
  line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '''\venv'''
